got tests to stop poisoning each other by deleting and recreating the database between each test. Now need to figure out why the refresh token is not getting saved